acvus-mir-test/tests/snapshots/inline__inline_mixed_local_extern.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 |   r0 = take $v1
     2 |   r1 = take $v1
     3 |   r2 = r0 + r1
     4 |   r3 = call #0(r2)
     5 |   return r3

    ; r0 ($x) : Int
    ; r1 ($x) : Int
    ; r2 (v7) : Int
    ; r3 (to_string(...)) : String
    ; r4 (v1) : Int
    ; r5 (double(...)) : Int
