acvus-mir-test/tests/snapshots/inline__inline_multi_arg.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 |   r0 = take $v1
     3 |   r1 = take $v2
     4 |   r2 = r0 + r1
     5 |   return r2

    ; r0 ($a) : Int
    ; r1 ($b) : Int
    ; r2 (v8) : Int
    ; r3 (add(...)) : Int
    ; r4 (v1) : Int
    ; r5 (v2) : Int
