acvus-mir-test/tests/snapshots/inline__inline_multiple_calls.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 |   r0 = take $v1
     3 |   r1 = r0 + 1 (r2)
     5 |   r3 = take $v3
     7 |   r4 = r3 + 1 (r5)
     8 |   r6 = r1 + r4
     9 |   return r6

    ; r0 ($x) : Int
    ; r1 (v9) : Int
    ; r2 (v8) : Int
    ; r3 ($x) : Int
    ; r4 (v13) : Int
    ; r5 (v12) : Int
    ; r6 (v5) : Int
    ; r7 (v3) : Int
    ; r8 (inc(...)) : Int
    ; r9 (v1) : Int
    ; r10 (inc(...)) : Int
