acvus-mir-test/tests/snapshots/inline__inline_multiple_context_writes.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @a
     1 |   assign @a = r0
     2 |   r1 = fetch @b
     3 |   assign @b = r1
     5 |   assign @a = 1 (r2)
     7 |   assign @b = 2 (r3)
     8 |   r4 = take @a
     9 |   r5 = take @b
    10 |   r6 = r4 + r5
    11 |   r7 = take @a
    12 |   commit @a = r7
    13 |   r8 = take @b
    14 |   commit @b = r8
    15 |   return r6

    ; r0 (@a) : Int
    ; r1 (@b) : Int
    ; r2 (v6) : Int
    ; r3 (v7) : Int
    ; r4 (@a) : Int
    ; r5 (@b) : Int
    ; r6 (v10) : Int
    ; r7 (v11) : Int
    ; r8 (v12) : Int
    ; r9 (@a) : Int
    ; r10 (init(...)) : Int
    ; r11 (@b) : Int
