acvus-mir-test/tests/snapshots/inline__inline_nested_three_levels.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 |   r0 = ref $v1
     2 |   r1 = load r0
     3 |   r2 = ref $x
     4 |   r3 = load r2
     5 |   r4 = ref $x
     6 |   r5 = load r4
     8 |   r6 = r5 + 1 (r7)
     9 |   r8 = ref $x
    10 |   r9 = load r8
    11 |   r10 = ref $x
    12 |   r11 = load r10
    14 |   r12 = r11 + 1 (r13)
    15 |   r14 = r6 + r12
    17 |   r15 = r14 * 2 (r16)
    18 |   return r15

    ; r0 (v4) : Ref<Int>
    ; r1 ($x) : Int
    ; r2 (v10) : Ref<Int>
    ; r3 ($x) : Int
    ; r4 (v18) : Ref<Int>
    ; r5 ($x) : Int
    ; r6 (v21) : Int
    ; r7 (v20) : Int
    ; r8 (v13) : Ref<Int>
    ; r9 ($x) : Int
    ; r10 (v23) : Ref<Int>
    ; r11 ($x) : Int
    ; r12 (v26) : Int
    ; r13 (v25) : Int
    ; r14 (v16) : Int
    ; r15 (v8) : Int
    ; r16 (v7) : Int
    ; r17 (b(...)) : Int
    ; r18 (a(...)) : Int
    ; r19 (v1) : Int
    ; r20 (c(...)) : Int
    ; r21 (a(...)) : Int
