acvus-mir-test/tests/snapshots/inline__inline_no_arg_function.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 |   return 5 (r0)

    ; r0 (v2) : Int
    ; r1 (get_five(...)) : Int
