acvus-mir-test/tests/snapshots/inline__inline_pipe_syntax.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     1 |   r0 = take $v1
     2 |   r1 = take $v1
     3 |   r2 = r0 + r1
     4 |   return r2

    ; r0 ($x) : Int
    ; r1 ($x) : Int
    ; r2 (v6) : Int
    ; r3 (v1) : Int
    ; r4 (double(...)) : Int
