acvus-mir-test/tests/snapshots/inline__inline_pure_function.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 |   r0 = ref $v1
     3 |   r1 = load r0
     4 |   r2 = ref $v2
     5 |   r3 = load r2
     6 |   r4 = r1 + r3
     7 |   return r4

    ; r0 (v6) : Ref<Int>
    ; r1 ($a) : Int
    ; r2 (v8) : Ref<Int>
    ; r3 ($b) : Int
    ; r4 (v10) : Int
    ; r5 (add(...)) : Int
    ; r6 (v2) : Int
    ; r7 (v1) : Int
