acvus-mir-test/tests/snapshots/inline__inline_result_unused_intermediate.snap
---
source: acvus-mir-test/tests/inline.rs
expression: ir
---
=== main ===
     2 |   r0 = 1 (r1) + 2 (r2)
     3 |   return r0

    ; r0 (v3) : i64
    ; r1 (v4) : i64
    ; r2 (v5) : i64
    ; r3 (get_a(...)) : i64
    ; r4 (get_b(...)) : i64
